--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -9,3 +9,12 @@
   text-decoration: none;
   outline: none;
 }
+
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 86px;
+}
